Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19270

Kernel panic in cl_file_inode_init() when mounting a file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.17.0
    • Lustre 2.14.0, Lustre 2.16.0, Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      When attempting to mount a file, the client panics before the error message is shown that the mounting path must be a directory:

      KERNEL: /usr/lib/debug/lib/modules/4.18.0-425.19.2.el8_lustre.aarch64/vmlinux  [TAINTED]
          DUMPFILE: /var/crash/127.0.0.1-2025-08-19-16:09:17/vmcore  [PARTIAL DUMP]
              CPUS: 2
              DATE: Tue Aug 19 14:09:16 CEST 2025
            UPTIME: 00:01:25
      LOAD AVERAGE: 0.36, 0.13, 0.04
             TASKS: 275
          NODENAME: lu-drazy-client
           RELEASE: 4.18.0-425.19.2.el8_lustre.aarch64
           VERSION: #1 SMP Mon Sep 9 10:18:08 CEST 2024
           MACHINE: aarch64  (unknown Mhz)
            MEMORY: 2 GB
             PANIC: "Unable to handle kernel NULL pointer dereference at virtual address 00000000000000c8"
               PID: 3400
           COMMAND: "mount.lustre"
              TASK: ffff000004dd9100  [THREAD_INFO: ffff000004dd9100]
               CPU: 0
             STATE: TASK_RUNNING (PANIC)
      
      PID: 3400     TASK: ffff000004dd9100  CPU: 0    COMMAND: "mount.lustre"
       #0 [ffff80000be9b440] machine_kexec at ffff800008020d78
       #1 [ffff80000be9b4a0] __crash_kexec at ffff8000081559dc
       #2 [ffff80000be9b630] crash_kexec at ffff800008155af8
       #3 [ffff80000be9b660] die at ffff80000800f344
       #4 [ffff80000be9b710] die_kernel_fault at ffff800008023ba8
       #5 [ffff80000be9b740] __do_kernel_fault at ffff800008023c9c
       #6 [ffff80000be9b770] do_page_fault at ffff800008a901fc
       #7 [ffff80000be9b7d0] do_translation_fault at ffff800008a90534
       #8 [ffff80000be9b800] do_mem_abort at ffff800008023ae0
       #9 [ffff80000be9b830] el1_abort at ffff800008008bcc
      #10 [ffff80000be9b840] el1_sync_handler at ffff800008008cf4
      #11 [ffff80000be9b980] el1_sync at ffff800008002878
      #12 [ffff80000be9b990] cl_file_inode_init at ffff8000016b587c [lustre]
      #13 [ffff80000be9ba20] ll_iget at ffff800001695d10 [lustre]
      #14 [ffff80000be9ba60] client_common_fill_super at ffff80000166fb1c [lustre]
      #15 [ffff80000be9bb60] ll_fill_super at ffff800001676c94 [lustre]
      #16 [ffff80000be9bcb0] lustre_fill_super at ffff8000016a9b08 [lustre]
      #17 [ffff80000be9bce0] mount_nodev at ffff800008328e34
      #18 [ffff80000be9bd10] lustre_mount at ffff8000016a9a0c [lustre]
      #19 [ffff80000be9bd40] legacy_get_tree at ffff80000836a47c
      #20 [ffff80000be9bd60] vfs_get_tree at ffff800008327370
      #21 [ffff80000be9bd90] do_mount at ffff8000083517e4
      #22 [ffff80000be9be20] ksys_mount at ffff80000835212c
      #23 [ffff80000be9be60] __arm64_sys_mount at ffff800008352170
      #24 [ffff80000be9be80] do_el0_svc at ffff8000080190a0
      #25 [ffff80000be9beb0] el0_sync_handler at ffff80000800935c
      #26 [ffff80000be9bff0] el0_sync at ffff800008002b7c
           PC: 0000ffffb0a48d78   LR: 00000000004051e0   SP: 0000ffffde7e5760
          X29: 0000ffffde7e5770  X28: 0000000001000000  X27: 00000000fffffff5
          X26: 0000ffffde7e8b60  X25: 0000ffffde7edd98  X24: 0000ffffde7ebb78
          X23: 0000000000000000  X22: 000000000042f000  X21: 0000000000000000
          X20: 000000000042f000  X19: 0000000000410f58  X18: 0000000000000000
          X17: 0000000000430238  X16: 0000ffffb0a48d70  X15: 0000ffffb0a9a44c
          X14: 0000ffffb0a28e50  X13: 0000000000000000  X12: 0000000000008040
          X11: 0000000000000038  X10: 0101010101010101   X9: 7f7f7f7f7f7f7f7f
           X8: 0000000000000028   X7: 8000000000000000   X6: 0000000000000080
           X5: 65727473ffffffff   X4: 000000002aa716f0   X3: 0000000001000000
           X2: 0000000000410f58   X1: 0000ffffde7ebb78   X0: 000000002aa712c0
          ORIG_X0: 000000002aa712c0  SYSCALLNO: 28  PSTATE: 80001000
      

            mvef Marc Vef
            mvef Marc Vef
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: